--- a/src/app/pages/chuck-norris/homepage/homepage.component.html
+++ b/src/app/pages/chuck-norris/homepage/homepage.component.html
@@ -1,5 +1,5 @@
 <div class="p-grid p-dir-col">
-  <h1 [ngStyle]="{ 'visibility': mostraTesto ? 'visible' : 'hidden' }" class="fadein animation-duration-1000 flex align-items-center justify-content-center font-bold border-round py-3 comic-style-text">
+  <h1  class="fadein animation-duration-1000 flex align-items-center justify-content-center font-bold border-round py-3 comic-style-text">
     Dio perdona, Chuck NO !!! <img src="/assets/13f4093020fc96ba87eae8221d071af7.jpg" alt="Descrizione dell'immagine" style="width: 80px;">
   </h1>
 </div>
