--- a/src/app/pages/harry-potter/wizard-detail/wizard-detail.component.html
+++ b/src/app/pages/harry-potter/wizard-detail/wizard-detail.component.html
@@ -1,5 +1,5 @@
 <div class="container mt-4">
-  <button [routerLink]="['wizard-list']" class="btn btn-primary mb-3">Back to Wizards</button>
+  <button [routerLink]="['/harry-potter/wizard-list']" class="btn btn-primary mb-3">Back to Wizards</button>
 
   <h2 class="mb-4 text-center" style="color: #6c757d; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);">Elixir List</h2>
 
